Added Testimonial Section

--- a/index.html
+++ b/index.html
@@ -14,37 +14,129 @@
     <!-- Pricing Section Ussing Flex Box and Grid -->
     <section class="pricing">
         <div class="pricing__container">
-            <h2>Our Pricing</h2>
-<div class="pricing__container__grid">
-    <div class="card basic">
-        <span>Basic</span>
-        <h1>$19.99</h1>
-        <span>500 GB Storage</span>
-        <span>2 Users Allowed</span>
-        <span>Send up to 3 GB</span>
-        <a href="" class="cta">Learn More</a>
-    </div>
-    <div class="card proffesional">
-        <span>Professional</span>
-        <h1>$24.99</h1>
-        <span>1 TB Storage</span>
-        <span>5 Users Allowed</span>
-        <span>Send up to 10 GB</span>
-        <a href="" class="cta">Learn More</a>
-    </div>
-    <div class="card master">
-        <span>Master</span>
-        <h1>$39.99</h1>
-        <span>2 TB Storage</span>
-        <span>10 Users Allowed</span>
-        <span>Send up to 20 GB</span>
-        <a href="" class="cta">Learn More</a>
-    </div>
-</div>
+            <h2 class="headings">Our Pricing</h2>
+            <div class="pricing__container__grid">
+                <div class="card basic">
+                    <span>Basic</span>
+                    <h1>$19.99</h1>
+                    <span>500 GB Storage</span>
+                    <span>2 Users Allowed</span>
+                    <span>Send up to 3 GB</span>
+                    <a href="" class="cta">Learn More</a>
+                </div>
+                <div class="card proffesional">
+                    <span>Professional</span>
+                    <h1>$24.99</h1>
+                    <span>1 TB Storage</span>
+                    <span>5 Users Allowed</span>
+                    <span>Send up to 10 GB</span>
+                    <a href="" class="cta">Learn More</a>
+                </div>
+                <div class="card master">
+                    <span>Master</span>
+                    <h1>$39.99</h1>
+                    <span>2 TB Storage</span>
+                    <span>10 Users Allowed</span>
+                    <span>Send up to 20 GB</span>
+                    <a href="" class="cta">Learn More</a>
+                </div>
+            </div>
         </div>
 
     </section>
+<!-- Testimonial section with Flexbox and Grid -->
 
+    <section class="testimonial">
+        <div class="testimonial__container">
+            <h2 class="headings">Testimonials</h2>
+            <div class="testimonial__container__grid">
+                <div class="card one">
+                    <div class="card__info">
+                        <img src="./asset/grid-testimonial/image-daniel.jpg" alt="">
+                        <div class="card__info__name">
+                            <p class="name">Daniel Clifford</p>
+                            <p class="qualification">Verified Graduate</p>
+                        </div>
+                    </div>
+                    <p class="card__primary">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum rerum alias, illo sequi ducimus itaque?
+                    </p>
+                    <p class="card__secondary">
+                        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus esse quasi aut expedita tempore dignissimos provident possimus explicabo. Beatae iure, obcaecati eligendi doloribus accusantium sed culpa quidem facere! Doloribus maxime cupiditate tenetur corrupti ut tempore in iure consequuntur et atque."
+                    </p>
+                </div>
+
+                <div class="card two">
+                    <div class="card__info">
+                        <img src="./asset/grid-testimonial/image-jeanette.jpg" alt="">
+                        <div class="card__info__name">
+                            <p class="name">Janette Haxmon</p>
+                            <p class="qualification">Verified Graduate</p>
+                        </div>
+                    </div>
+                    <p class="card__primary">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum rerum alias, illo sequi ducimus itaque?
+                    </p>
+                    <p class="card__secondary">
+                        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus esse quasi aut expedita tempore dignissimos provident possimus explicabo. Beatae iure, obcaecati eligendi doloribus accusantium sed culpa quidem facere! Doloribus maxime cupiditate tenetur corrupti ut tempore in iure consequuntur et atque."
+                    </p>
+                </div>
+
+
+                <div class="card three">
+                    <div class="card__info">
+                        <img src="./asset/grid-testimonial/image-jonathan.jpg" alt="">
+                        <div class="card__info__name">
+                            <p class="name">Jonathan Walters</p>
+                            <p class="qualification">Verified Graduate</p>
+                        </div>
+                    </div>
+                    <p class="card__primary">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum rerum alias, illo sequi ducimus itaque?
+                    </p>
+                    <p class="card__secondary">
+"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis, recusandae minus vel nobis tempora fugiat! Eveniet doloribus obcaecati accusamus quisquam iusto quas molestias temporibus quasi assumenda! Temporibus quaerat iusto ipsum suscipit quibusdam, odio dolores nulla quas quisquam incidunt aperiam quos rerum eligendi ducimus, laborum iure enim, iste delectus facilis perferendis laudantium. Eveniet, explicabo deleniti accusamus illo error totam. Cupiditate minus consectetur eos iure repudiandae quibusdam omnis fugiat dicta ipsam quam magnam, autem odio hic porro aliquid. Reprehenderit a temporibus assumenda, delectus voluptates neque inventore harum. Ipsa, aut. Fugit commodi expedita maiores, consectetur, iste nam hic sed asperiores aliquam, saepe id."
+                    </p>
+                </div>
+
+                <div class="card five">
+                    <div class="card__info">
+                        <img src="./asset/grid-testimonial/image-patrick.jpg" alt="">
+                        <div class="card__info__name">
+                            <p class="name">Patrick Abrams</p>
+                            <p class="qualification">Verified Graduate</p>
+                        </div>
+                    </div>
+                    <p class="card__primary">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum rerum alias, illo sequi ducimus itaque?
+                    </p>
+                    <p class="card__secondary">
+"Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores iste a dolorum, voluptatem sed dolorem maiores voluptates reiciendis praesentium tempore."
+                    </p>
+                </div>
+
+                <div class="card four">
+                    <div class="card__info">
+                        <img src="./asset/grid-testimonial/image-kira.jpg" alt="">
+                        <div class="card__info__name">
+                            <p class="name">Kaira Advani</p>
+                            <p class="qualification">Verified Graduate</p>
+                        </div>
+                    </div>
+                    <p class="card__primary">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum rerum alias, illo sequi ducimus itaque?
+                    </p>
+                    <p class="card__secondary">
+                        "Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta nesciunt velit nihil sit cum repellendus quo? Quod eius nemo molestias."
+                    </p>
+                </div>
+
+
+               
+                
+            </div>
+        </div>
+    </section>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
