--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
 </head>
 
 <body>
+    <!-- Apparel Landing Page -->
+    <section class="apparel">
+        <div class="apparel__container">
+           <div class="hero">
+               <img src="./asset/apprarel-landing-page/logo.svg" alt="" class="hero__logo">
+               <div class="hero__image"></div>
+               <div class="hero__text">
+                   <h1 class="one">WE'RE</h1>
+                   <h1 class="two">COMING SOON</h1>
+                   <p>We're coming soon Hello fellow shoppers! We're currently building our new fashion store. Add your email below to stay up-to-date with announcements and our launch deals. Email Address</p>
+                   <div class="hero__input">
+                    <input type="text" placeholder="Email Address">
+                    <img src="./asset/apprarel-landing-page/icon-arrow.svg" class="arrow" alt="">
+                </div>
+                </div>
+               
+           </div> 
+        </div>
+    </section>
+
     <!-- Pricing Section Ussing Flex Box and Grid -->
     <section class="pricing">
         <div class="pricing__container">
