Added hover and full screen sefction

--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
 </head>
 
 <body>
+     <!-- Enlarged cursor on Hover -->
+     <section class="hovercursor">
+        <div class="container__cursor">
+            <ul>
+                <li>Home</li>
+                <li>Pricing</li>
+                <li>Services</li>
+                <li>About</li>
+            </ul>
+            <div class="cursor"></div>
+        </div>
+    </section>
+
     <!-- Apparel Landing Page -->
     <section class="apparel">
         <div class="apparel__container">
@@ -157,6 +170,17 @@
             </div>
         </div>
     </section>
+
+    <!-- Fulls screen iamge -->
+    <section class="full-image">
+        <div class="img-container">
+            <img src="./asset/fullscreen/p1.png" alt="">
+            <img src="./asset/fullscreen/p2.png" alt="">
+            <img src="./asset/fullscreen/p3.png" alt="">
+            <img src="./asset/fullscreen/p4.png" alt="">
+        </div>
+    </section>
+   
     <!-- Script -->
     <script src="script.js"></script>
 </body>
