Added Horizontal Scroll Image Slider

--- a/index.html
+++ b/index.html
@@ -208,6 +208,32 @@
         </div>
       </div>
     </section>
+  <!-- Div Image Slider -->
+  <section class="div-slider">
+    <h1>Vertical Image Scroll Slider</h1>
+    <div class="slider">
+      <figure>
+        <img src="./asset/slider/1.jpeg" alt="">
+        <figcaption>This is football</figcaption>
+      </figure>
+      <figure>
+        <img src="./asset/slider/2.jpeg" alt="">
+        <figcaption>All or nothing</figcaption>
+      </figure>
+      <figure>
+        <img src="./asset/slider/3.jpeg" alt="">
+        <figcaption>I love this game</figcaption>
+      </figure>
+      <figure>
+        <img src="./asset/slider/4.jpeg" alt="">
+        <figcaption>Football is the key</figcaption>
+      </figure>
+      <figure>
+        <img src="./asset/slider/5.jpeg" alt="">
+        <figcaption>Do or die....</figcaption>
+      </figure>
+    </div>
+  </section>
 
     <!-- Fulls screen iamge -->
     <section class="full-image">
@@ -219,6 +245,7 @@
       </div>
     </section>
 
+  
     <!-- Script -->
     <script src="script.js"></script>
   </body>
