Added Wolverine section

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
   </head>
 
   <body>
-    
-
     <!-- Enlarged cursor on Hover -->
     <section class="hovercursor">
       <div class="container__cursor">
@@ -27,6 +25,21 @@
         <div class="cursor"></div>
       </div>
     </section>
+
+    <!-- wolverine card -->
+
+    <section class="wolve">
+      <div class="card">
+        <div class="card__text">
+          <h2>A Marvel Comics Limited Series</h2>
+          <h1>Wolverine</h1>
+        </div>
+        <div class="card__image">
+          <img src="/asset/wolverine.png" alt="">
+        </div>
+      </div>
+    </section>
+
 
     <!-- Apparel Landing Page -->
     <section class="apparel">
@@ -208,32 +221,32 @@
         </div>
       </div>
     </section>
-  <!-- Div Image Slider -->
-  <section class="div-slider">
-    <h1>Vertical Image Scroll Slider</h1>
-    <div class="slider">
-      <figure>
-        <img src="./asset/slider/1.jpeg" alt="">
-        <figcaption>This is football</figcaption>
-      </figure>
-      <figure>
-        <img src="./asset/slider/2.jpeg" alt="">
-        <figcaption>All or nothing</figcaption>
-      </figure>
-      <figure>
-        <img src="./asset/slider/3.jpeg" alt="">
-        <figcaption>I love this game</figcaption>
-      </figure>
-      <figure>
-        <img src="./asset/slider/4.jpeg" alt="">
-        <figcaption>Football is the key</figcaption>
-      </figure>
-      <figure>
-        <img src="./asset/slider/5.jpeg" alt="">
-        <figcaption>Do or die....</figcaption>
-      </figure>
-    </div>
-  </section>
+    <!-- Div Image Slider -->
+    <section class="div-slider">
+      <h1>Vertical Image Scroll Slider</h1>
+      <div class="slider">
+        <figure>
+          <img src="./asset/slider/1.jpeg" alt="" />
+          <figcaption>This is football</figcaption>
+        </figure>
+        <figure>
+          <img src="./asset/slider/2.jpeg" alt="" />
+          <figcaption>All or nothing</figcaption>
+        </figure>
+        <figure>
+          <img src="./asset/slider/3.jpeg" alt="" />
+          <figcaption>I love this game</figcaption>
+        </figure>
+        <figure>
+          <img src="./asset/slider/4.jpeg" alt="" />
+          <figcaption>Football is the key</figcaption>
+        </figure>
+        <figure>
+          <img src="./asset/slider/5.jpeg" alt="" />
+          <figcaption>Do or die....</figcaption>
+        </figure>
+      </div>
+    </section>
 
     <!-- Fulls screen iamge -->
     <section class="full-image">
@@ -245,7 +258,39 @@
       </div>
     </section>
 
-  
+    <!-- Multi Level Dropdown -->
+    <section class="dropdown">
+      <header class="mutli-menu">
+        <div class="menu">
+          <div class="menu__logo">
+            <h1>Multi Level Dropdown</h1>
+          </div>
+          <div class="menu__navbar">
+            <ul class="menu__list">
+              <li><a href="">Plans</a></li>
+              <li><a href="">Resources</a></li>
+              <li class="courses__parent">
+                <a class="courses" href="">Courses</a>
+                <ul class="courses__list sublist">
+                  <li><a href="">Front-End Development</a></li>
+                  <li><a href="">Back-End Development</a></li>
+                  <li><a href="">Devops</a></li>
+                </ul>
+              </li>
+              <li class="products__parent">
+                <a class="products" href="">Products</a>
+                <ul class="product__list sublist" >
+                  <li><a href="">Development</a></li>
+                  <li><a href="">Analytics</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </header>
+    </section>
+
+    
     <!-- Script -->
     <script src="script.js"></script>
   </body>
